--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,55 @@
+@import url(https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap);
+
 /* You can add global styles to this file, and also import other style files */
+*{
+  font-family: 'Nunito', sans-serif;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  user-select: none;
+}
+body{
+  background-color: var(--lightgray);
+  color: #5a5a5a;
+}
+.big-title{
+  font-size: 4.5rem;
+  text-align: center;
+}
+:root{
+  --accent: #2EF2BB;
+  --dark: #3FBF04;
+  --main: #84BF04;
+  --light: #A9BF04;
+  --lightgray: #f1f1f1;
+}
+.footer{
+  background-color: white;
+}
+.header{
+  background-color: white;
+}
+.fa-youtube{
+  color: #FF0000;
+}
+.fa-twitter{
+  color: #1DA1F2;
+}
+.fa-twitch{
+  color: #6441a5;
+}
+.fa-discord{
+  color: #7289da;
+}
+.logo{
+  height: 70px;
+  width: 70px;
+  vertical-align:middle;
+  border-radius: 10px;
+}
+.header span{
+  font-size: 2rem;
+  vertical-align:middle;
+}
 
 
 /*# sourceMappingURL=styles.css.map*/
